--- a/web/workspace/frontend/sass/site/main.scss
+++ b/web/workspace/frontend/sass/site/main.scss
@@ -315,12 +315,8 @@ form {
 		max-width: 680px;
 
 		&:first-of-type() {
-			margin-top: 0;
+			margin-top: 0.6em;
 		}
-	}
-	> h1:first-child,
-	> h2:first-child {
-		margin-top: 0.5em;
 	}
 	img {
 		max-width: 100%;
@@ -369,6 +365,9 @@ abbr {
 		border-bottom: 1px solid;
 		font-weight: bold;
 		color: #2C85E5;
+	}
+	h2:first-of-type {
+		margin-top: 0.6em;
 	}
 	h1 a, h2 a, h3 a, h4 a, h5 a {
 		font-weight: normal;
