--- a/web/workspace/partials/latest/article.dust
+++ b/web/workspace/partials/latest/article.dust
@@ -9,7 +9,9 @@
 
     <div class="container container--divider marg__top">
       <div class="grid">
-        <div class="read normal col w-2-3">{@markdown}{body|s}{/markdown}</div>
+        <div class="normal col w-2-3 documentation">
+          {@markdown}{body|s}{/markdown}
+        </div>
         <div class="col w-1-3">
           {>"partials/latest/sidebar" /}
         </div>
