--- a/web/workspace/partials/navigation.dust
+++ b/web/workspace/partials/navigation.dust
@@ -1,10 +1,10 @@
 <header class="grid bs-grid">
-  <div class="col w-1-4">
+  <div class="col w-1-4 bs-w-1-2">
     <h1><a href="/" class="inline-block"><img src="/assets/img/dadi-{^light}light{:else}colour{/light}.svg" width="150" alt="DADI"></a></h1>
   </div>
   
-  <div class="col w-1-4 bs-w-1-1">
-    <ul class="normal nav  marg__right--x2">
+  <div class="col w-1-4 bs-w-1-2">
+    <ul class="normal nav marg__right--x2">
       <li><a href="/platform/" {@eq key=page.key value="Platform"}class="active"{/eq}>Platform</a></li>
       <li><a href="http://docs.dadi.tech/">Documentation</a></li>
       <li><a href="/success-stories/" {@eq key=page.key value="Success stories"}class="active"{/eq}>Success stories</a></li>
@@ -12,12 +12,12 @@
     </ul>
   </div>
 
-  <div class="col w-1-4 bs-w-1-2">
+  <div class="col w-1-4 bs-w-1-1 promos">
     <p class="fwb small">Looking for a hosted technology solution?</p>
     <a href="/on-demand/" class="btn btn--fill btn--red">On demand</a>
   </div>
 
-  <div class="col w-1-4 bs-w-1-2">
+  <div class="col w-1-4 bs-w-1-1 promos">
     <p class="fwb small">Need help integrating or customising our platform?</p>
     <a href="/solutions/" class="btn btn--fill btn--green">Solutions</a>
   </div>
