--- a/web/workspace/partials/solutions/list.dust
+++ b/web/workspace/partials/solutions/list.dust
@@ -22,6 +22,6 @@
       {/solutions.results}
     </ul>
 
-    <p><a href="/solutions/" class="btn btn--blue">Learn more about solutions we offer</a></p>
+    <p><a href="/solutions/" class="btn btn--blue">More about solutions we offer</a></p>
   </div>
 </div>
