--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -6,13 +6,13 @@
 
 {<top}
   <div class="grid">
-    <div class="col w-1-2 marg__bottom--x2 pad__top">
+    <div class="col w-1-2 pad__top intro">
       <p class="hdr kilo no-marg-i txt--blue">The technology of the web, reinvented.</p>
        <p class="normal"><strong>DADI</strong> is a powerful, <a href="/platform/concepts/api-first-and-cope/" class="concept">API-first</a> suite of microservices for products of all sizes and scale. It enables real-time, personalized experiences driven by machine learning.</p>
       <p class="normal pad__top"><a href="/platform/" class="btn btn--blue">How it works</a></p>
     </div>
     <div class="col w-1-2">
-      <p class="pad__top--half hdr medium txt--grey">Dive right in…</p>
+      <p class="pad__top--half hdr medium txt--grey bs-hide">Dive right in…</p>
       <ul class="list--line txt--white medium">
         <li><a style="padding: 15px 0" href="https://github.com/dadi/">
           <img src="/assets/img/logo-github-white.png" height="30" class="alignv float--right">
@@ -44,16 +44,16 @@
   </div>
 </div>
 
-<div class="container container--divider normal">
-  <div class="grid marg__top marg__bottom--x2">
-    <div class="col w-1-3"><strong class="hdr medium block">Next-generation CMS</strong> Get your content into the hands of your users, whether on mobile, tablet, games console, television or desktop.</div>
-    <div class="col w-1-3"><strong class="hdr medium block">Hyper-personalize</strong> Stop treating all users the same – give them editorial you know they will read and products you know they will buy.</div>
-    <div class="col w-1-3"><strong class="hdr medium block">Know your product</strong> Take the guess work out of development with market-leading analytics driven by facts and not averages.</div>
+<div class="container container--divider normal marg__top marg__bottom--x2">
+  <div class="grid list--gridtick">
+    <li class="col w-1-3"><strong class="hdr medium block">Next-generation CMS</strong> Get your content into the hands of your users, whether on mobile, tablet, games console, television or desktop.</li>
+    <li class="col w-1-3"><strong class="hdr medium block">Hyper-personalize</strong> Stop treating all users the same – give them editorial you know they will read and products you know they will buy.</li>
+    <li class="col w-1-3"><strong class="hdr medium block">Know your product</strong> Take the guess work out of development with market-leading analytics driven by facts and not averages.</li>
   </div>
-  <div class="grid marg__bottom--x2">
-    <div class="col w-1-3"><strong class="hdr medium block">Succeed faster</strong> DADI gives you the pace to get to MVP quickly and the tools to measure product performance as you iterate.</div>
-    <div class="col w-1-3"><strong class="hdr medium block">Open Source end to end</strong> Enterprise muscle without the fat – or the greedy licence fees.</div>
-    <div class="col w-1-3"><strong class="hdr medium block">Your product as CRM</strong> Manage (and target) every interaction with your users. Never miss a moment to build a positive relationship.</div>
+  <div class="grid list--gridtick">
+    <li class="col w-1-3"><strong class="hdr medium block">Succeed faster</strong> DADI gives you the pace to get to MVP quickly and the tools to measure product performance as you iterate.</li>
+    <li class="col w-1-3"><strong class="hdr medium block">Open Source end to end</strong> Enterprise muscle without the fat – or the greedy licence fees.</li>
+    <li class="col w-1-3"><strong class="hdr medium block">Your product as CRM</strong> Manage (and target) every interaction with your users. Never miss a moment to build a positive relationship.</li>
   </div>
 </div>
 
