--- a/web/workspace/partials/content-modules/customers.dust
+++ b/web/workspace/partials/content-modules/customers.dust
@@ -1,4 +1,4 @@
-<div class="marg__bottom bg--light-grey pad--x2 bdr-shadow">
+<div class="marg__bottom bg--light-grey pad bdr-shadow customers">
   <div class="container">
     <div class="grid">
       <div class="col w-1-3">
@@ -6,18 +6,18 @@
         <a href="/success-stories/" class="marg__top alignv btn btn--fill txt--white btn--blue small inline-block">See all success stories</a>
       </div>
       <ul class="col w-2-3 list--quotes normal cf alignc">
-        <li class="inline-block alignv w-1-3 bs-w-1-1 hdr">
+        <li class="inline-block alignv w-1-3 bs-w-1-2 hdr">
           <img class="alignv" src="/assets/img/logo-lifestyleone.png" height="39" alt="Lifestyle.one">
         </li>
-        <li class="inline-block alignv alignc w-1-3 bs-w-1-1 hdr">
+        <li class="inline-block alignv w-1-3 bs-w-1-2 hdr">
           <img class="alignv" src="/assets/img/logo-whatcar.png" height="25" alt="WhatCar?">
         </li>
-        <li class="inline-block alignv alignc w-1-3 bs-w-1-1 hdr">
+        <li class="inline-block alignv w-1-3 bs-w-1-2 hdr">
           <img class="alignv" src="/assets/img/logo-empire.png" height="25" alt="Empire Magazine">
-        <li class="inline-block alignv alignc w-1-3 bs-w-1-1 hdr">
+        <li class="inline-block alignv w-1-3 bs-w-1-2 hdr">
           <img class="alignv" src="/assets/img/logo-vle.png" height="40" alt="Virgin Limited Edition">
         </li>
-        <li class="inline-block alignv alignr w-1-3 bs-w-1-1 hdr">
+        <li class="inline-block alignv w-1-3 bs-w-1-1 hdr">
           <img class="alignv" src="/assets/img/logo-monocle.png" height="21" alt="Monocle">
         </li>
       </ul>
