--- a/web/workspace/partials/footer.dust
+++ b/web/workspace/partials/footer.dust
@@ -14,9 +14,9 @@
           </form>
         </div>
       </div>
-      <div class="grid marg__top marg__bottom">
+      <div class="grid marg__top">
         {@iter items=insights from=0 to=3}
-          <div class="col w-1-3">
+          <div class="col w-1-3 pad__bottom">
             {! <p class="txt--grey hdr">{@formatDate data=attributes.date parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM" /}</p> !}
             <p class="hdr large txt--blue"><a href="/latest/{handle}/">{attributes.title}</a></p>
             <p class="small txt--mid-grey">By <strong>{attributes.author}</strong></p>
