--- a/web/workspace/partials/latest/index.dust
+++ b/web/workspace/partials/latest/index.dust
@@ -1,4 +1,4 @@
-<div class="container pad__top marg__top">
+<div class="container ">
   <div class="grid">
     <div class="col w-2-3">
       {#insights}
