--- a/web/workspace/partials/platform/index.dust
+++ b/web/workspace/partials/platform/index.dust
@@ -1,18 +1,18 @@
-<div class="container container--pad alignc">
-  <div class="grid normal fwb">
-    <div class="col w-1-4"><a href="https://github.com/dadi/">
+<div class="container alignc">
+  <div class="grid normal fwb pad__top">
+    <div class="col w-1-4 bs-w-1-2 pad__bottom--x2"><a href="https://github.com/dadi/">
       <img src="/assets/img/logo-github.png" height="45" class="alignv">
       <span class="pad__top block">Github</span>
     </a></div>
-    <div class="col w-1-4"><a href="https://www.npmjs.com/org/dadi/">
+    <div class="col w-1-4 bs-w-1-2 pad__bottom--x2"><a href="https://www.npmjs.com/org/dadi/">
       <img src="/assets/img/logo-npm.png" height="45" class="alignv">
       <span class="pad__top block">NPM</span>
     </a></div>
-    <div class="col w-1-4"><a href="http://docs.dadi.tech/">
+    <div class="col w-1-4 bs-w-1-2 pad__bottom--x2"><a href="http://docs.dadi.tech/">
       <img src="/assets/img/d-dark.png" height="45" class="alignv">
       <span class="pad__top block">Docs</span>
     </a></div>
-    <div class="col w-1-4"><a href="/on-demand/">
+    <div class="col w-1-4 bs-w-1-2 pad__bottom--x2"><a href="/on-demand/">
       <img src="/assets/img/logo-ondemand.png" height="45" class="alignv">
       <span class="pad__top block">On demand</span>
     </a></div>
