--- a/web/workspace/pages/index.dust
+++ b/web/workspace/pages/index.dust
@@ -30,7 +30,7 @@
   </div>  
 {/top}
 
-<div class="container container--pad">
+<div class="container pad__bottom">
   <div class="grid">
     <div class="col w-1-2">
       <p class="hdr larger">A ground up reimagination of web tech, built on a breakthrough thought:</p>
