New success story images

--- a/web/workspace/pages/success-stories.dust
+++ b/web/workspace/pages/success-stories.dust
@@ -28,6 +28,10 @@
     </div>
 
     <div class="container container--divider">
+      <img class="fill" src="/assets/successes/{handle}/1.jpg">   
+    </div>
+
+    <div class="container container--divider">
       <div class="grid">
         <div class="col w-1-2">
           <h2 class="large read alignauto no-marg-i txt--grey">Requirements</h2>
@@ -41,14 +45,7 @@
     </div>
 
     <div class="container container--divider">
-      <div class="grid bs-grid">
-        <div class="col w-1-2 bs-w-1-2 overflow-hidden">
-          <img style="width:auto;height:350px" src="/assets/successes/{handle}-1.png">
-        </div>
-        <div class="col w-1-2 bs-w-1-2 overflow-hidden">
-          <img style="width:auto;height:350px" src="/assets/successes/{handle}-2.png">
-        </div>
-      </div>
+      <img class="fill" src="/assets/successes/{handle}/2.jpg">
     </div>
 
     <div class="container container--divider">
@@ -62,6 +59,14 @@
           <div class="pad__top marg__top pad__bottom"><a href="/success-stories/" class="btn btn--red small">See more success stories</a></div>
         </div>
       </div>
+    </div>
+
+    <div class="container container--divider">
+      <img class="fill" src="/assets/successes/{handle}/3.jpg">     
+    </div>
+
+    <div class="container container--divider">
+      <img class="fill" src="/assets/successes/{handle}/4.jpg">  
     </div>
   {/successes.results}
 
