--- a/web/workspace/partials/breadcrumb.dust
+++ b/web/workspace/partials/breadcrumb.dust
@@ -5,7 +5,7 @@
   {@none}
     {?params}
       {@ne key=page.key value="supporting"}
-        <div class="alignc marg__bottom small">
+        <div class="alignc small">
           <ul class="list--breadcrumb titlecase">
             <li><a href="/">home</a></li>
             <li><a href="/{title}/">{page.key}</a></li>
