--- a/web/workspace/pages/success-stories.dust
+++ b/web/workspace/pages/success-stories.dust
@@ -72,6 +72,14 @@
       <img class="fill" src="/assets/successes/{handle}/4.jpg" alt="{title} case study image">
       <p class="txt--grey fsi">{captions[3]}</p>  
     </div>
+
+    {?vimeo}
+      <div class="container container--divider">
+        <iframe src="https://player.vimeo.com/video/{vimeo}?title=0&byline=0&portrait=0" width="100%" height="570" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <p class="txt--grey fsi">Video overview of the site.</p> 
+      </div>
+    {/vimeo}
+
   {/successes.results}
 
   {>"partials/solutions/list" /}
