--- a/web/workspace/partials/code-examples/cdn.dust
+++ b/web/workspace/partials/code-examples/cdn.dust
@@ -2,7 +2,7 @@
   <div class="col w-1-2">
     <h2>Recipes</h2>
     <p>Delivery Recipes enable a predefined set of image manipulation parameters to be mapped to a URL.</p>
-    <p><a href="http://docs.dadi.tech/cdn/recipes" class="btn btn--fill small ">Find out more</a></p>
+    <p><a href="http://docs.dadi.tech/cdn/concepts/recipes/" class="btn btn--fill small ">Find out more</a></p>
 
     <h2 class="pad__top">Example recipe.json</h2>
 
@@ -28,7 +28,7 @@
     <p>Routes allow DADI CDN to make a decision about which Delivery Recipe to use for the current request, based on a set of configurable conditions.</p>
     <p>Conditions can include the type of device being used, the network type, user location and language.</p>
     <p>Branching enables a set of conditional routing rules to be applied to a request.</p>
-    <p><a href="http://docs.dadi.tech/cdn/routes" class="btn btn--fill small ">Find out more</a></p>
+    <p><a href="http://docs.dadi.tech/cdn/concepts/routes/" class="btn btn--fill small ">Find out more</a></p>
 
     <h2 class="pad__top">Example route.json</h2>
 
