--- a/web/workspace/partials/platform/product.dust
+++ b/web/workspace/partials/platform/product.dust
@@ -8,6 +8,7 @@
       <li><a href="https://www.npmjs.com/package/@dadi/{product}">NPM</a></li>
       <li><a href="http://docs.dadi.tech/{product}">Documentation</a></li>
       <li><a href="/on-demand/">DADI On-demand</a></li>
+      {?demo}<li><a class="btn btn--small" href="{demo}">Live demo</a></li>{/demo}
     </ul>
   </div>
 </div>
