--- a/web/workspace/pages/bugbounty.dust
+++ b/web/workspace/pages/bugbounty.dust
@@ -3,7 +3,7 @@
 {<title}Bug bounty{/title}
 
 {<top}
-<h1 class="txt--green kilo">Help make the DADI platform<br>more secure for everyone</h1>
+<h1 class="txt--green kilo no-marg-i pad__top">Help make the DADI platform<br>more secure for everyone</h1>
 {/top}
   
 <div class="container pad__bottom--x2">
