Update /careers/ section for #20

--- a/web/workspace/partials/footer.dust
+++ b/web/workspace/partials/footer.dust
@@ -34,6 +34,7 @@
           <li><a href="/latest/">Latest</a></li>
           <li><a href="/on-demand/">On demand</a></li>
           <li><a href="/about/">Working with DADI</a>
+          <li><a href="/careers/">Careers</a>
           <li><a href="/faq/">FAQ</a>
           <li><a href="/privacy/">Privacy</a></li>
         </ul>
