--- a/web/workspace/partials/latest/index.dust
+++ b/web/workspace/partials/latest/index.dust
@@ -1,12 +1,12 @@
 <div class="container ">
   <div class="grid">
     <div class="col w-2-3">
-      {#insights}
-        <p class="txt--grey hdr normal">{@formatDate data=attributes.date parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM YYYY" /}</p>
-        <p class="hdr larger txt--green"><a href="/latest/{handle}/">{attributes.title}</a></p>
-        <p class="normal">{@soberMarkdown}{attributes.preface}{/soberMarkdown}</p>
+      {#latest.results}
+        <p class="txt--grey hdr normal">{@formatDate data=metadata.date parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM YYYY" /}</p>
+        <p class="hdr larger txt--green"><a href="/latest/{metadata.handle}/">{metadata.title}</a></p>
+        <p class="normal">{@soberMarkdown}{metadata.preface}{/soberMarkdown}</p>
         <p class="small pad__bottom--x2"><a href="/latest/{handle}/" class="btn btn--green">Read more</a></p>
-      {/insights}
+      {/latest.results}
     </div>
     <div class="col w-1-3">
       {>"partials/latest/sidebar" /}
