--- a/web/workspace/partials/footer.dust
+++ b/web/workspace/partials/footer.dust
@@ -15,15 +15,15 @@
         </div>
       </div>
       <div class="grid marg__top">
-        {@iter items=insights from=0 to=3}
+        {#latest.results}
           <div class="col w-1-3 pad__bottom">
-            {! <p class="txt--grey hdr">{@formatDate data=attributes.date parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM" /}</p> !}
-            <p class="hdr large txt--blue"><a href="/latest/{handle}/">{attributes.title}</a></p>
-            <p class="small txt--mid-grey">By <strong>{attributes.author}</strong></p>
-            <p class="small">{@soberMarkdown}{@Truncate data="{attributes.preface}" length="110" ellipsis="true"/}{/soberMarkdown}</p>
-            <p class="small"><a href="/latest/{handle}/" class="btn btn--blue">Read more</a></p>
+            {! <p class="txt--grey hdr">{@formatDate data=metadata.date parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM" /}</p> !}
+            <p class="hdr large txt--blue"><a href="/latest/{handle}/">{metadata.title}</a></p>
+            <p class="small txt--mid-grey">By <strong>{metadata.author}</strong></p>
+            <p class="small">{@soberMarkdown}{@Truncate data="{metadata.preface}" length="110" ellipsis="true"/}{/soberMarkdown}</p>
+            <p class="small"><a href="/latest/{metadata.handle}/" class="btn btn--blue">Read more</a></p>
           </div>
-        {/iter}
+        {/latest.results}
       </div>
     </div>
     <div class="grid">
