--- a/web/workspace/partials/footer.dust
+++ b/web/workspace/partials/footer.dust
@@ -18,7 +18,7 @@
         {#latest-footer.results}
           <div class="col w-1-3 pad__bottom">
             {! <p class="txt--grey hdr">{@formatDate data=metadata.date parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM" /}</p> !}
-            <p class="hdr large txt--blue"><a href="/latest/{handle}/">{metadata.title}</a></p>
+            <p class="hdr large txt--blue"><a href="/latest/{metadata.handle}/">{metadata.title}</a></p>
             <p class="small txt--mid-grey">By <strong>{metadata.author}</strong></p>
             <p class="small">{@soberMarkdown}{@Truncate data="{metadata.preface}" length="110" ellipsis="true"/}{/soberMarkdown}</p>
             <p class="small"><a href="/latest/{metadata.handle}/" class="btn btn--blue">Read more</a></p>
