--- a/web/workspace/partials/navigation.dust
+++ b/web/workspace/partials/navigation.dust
@@ -13,7 +13,7 @@
   </div>
 
   <div class="col w-1-4 bs-w-1-1 promos">
-    <p class="fwb small">Looking for a hosted technology solution?</p>
+    <p class="fwb small">Looking for a cloud based content platform?</p>
     <a href="/on-demand/" class="btn btn--fill btn--red">On demand</a>
   </div>
 
