--- a/web/workspace/pages/platform.dust
+++ b/web/workspace/pages/platform.dust
@@ -1,7 +1,7 @@
 {>"partials/header" /}
 
 {<title}
-  {?params.page}
+  {?params.section}
     {concepts.results[0].title} / Platform
   {:else}
     {?params.product}
@@ -9,11 +9,11 @@
     {:else}
       Platform
     {/params.product}
-  {/params.page}
+  {/params.section}
 {/title}
 
-{?params.page}
-  {>"partials/platform/{params.page}" /}
+{?params.section}
+  {>"partials/platform/{params.section}" /}
 {:else}
   {?params.product}
     {#products.results}
@@ -23,6 +23,6 @@
   {:else}
     {>"partials/platform/index" /}
   {/params.product}
-{/params.page}
+{/params.section}
 
 {>"partials/footer" /}
