fix: latest links

--- a/web/workspace/partials/latest/index.dust
+++ b/web/workspace/partials/latest/index.dust
@@ -5,7 +5,7 @@
         <p class="txt--grey hdr normal">{@formatDate data=attributes.date parseFormat="YYYY-DD-MMMTh:mm:ss.ZZ" format="Do MMMM YYYY" /}</p>
         <p class="hdr larger txt--green"><a href="/latest/{attributes.category}/{attributes.handle}/">{attributes.title}</a></p>
         <p class="normal">{@soberMarkdown}{attributes.preface}{/soberMarkdown}</p>
-        <p class="small pad__bottom--x2"><a href="/latest/{handle}/" class="btn btn--green">Read more</a></p>
+        <p class="small pad__bottom--x2"><a href="/latest/{attributes.category}/{attributes.handle}/" class="btn btn--green">Read more</a></p>
       {/latest.results}
 
       <div class="cf pad__top--x2 pad__bottom--x2 alignc">
